--- a/resources/fxml/add.fxml
+++ b/resources/fxml/add.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -18,12 +19,12 @@
     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="107.0" minWidth="10.0" prefWidth="48.0" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="83.0" minHeight="0.0" prefHeight="23.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="231.0" minHeight="10.0" prefHeight="91.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="206.0" minHeight="10.0" prefHeight="103.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="205.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="192.0" minHeight="10.0" prefHeight="125.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="108.0" minHeight="10.0" prefHeight="104.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
@@ -32,15 +33,15 @@
       <Label text="Keywords:" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       <Label text="Author/s:" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <Label GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <TextField GridPane.columnIndex="2" GridPane.rowIndex="1">
+      <TextField fx:id="resPaperNameField" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin></TextField>
-      <TextField GridPane.columnIndex="2" GridPane.rowIndex="2">
+      <TextField fx:id="subjectField" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin></TextField>
-      <TextField GridPane.columnIndex="2" GridPane.rowIndex="3">
+      <TextField fx:id="KeywordsField" GridPane.columnIndex="2" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin></TextField>
@@ -49,24 +50,19 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin>
       </ComboBox>
-      <Button mnemonicParsing="false" text="Add New" GridPane.columnIndex="3" GridPane.rowIndex="4">
+      <Button fx:id="addNewAuthorBtn" mnemonicParsing="false" onAction="#addNewAuthorBtnAction" text="Add New" GridPane.columnIndex="3" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin>
       </Button>
-      <TextField prefHeight="598.0" prefWidth="280.0" GridPane.rowIndex="1" GridPane.rowSpan="6">
-         <GridPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </GridPane.margin>
-      </TextField>
       <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="6">
          <children>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Ok">
+            <Button fx:id="okButton" mnemonicParsing="false" onAction="#okButtonAction" prefHeight="25.0" prefWidth="76.0" text="Ok">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Cancel">
+            <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelButtonAction" prefHeight="25.0" prefWidth="72.0" text="Cancel">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
@@ -74,5 +70,9 @@
          </children>
       </HBox>
       <Label text="Text:" />
+      <TextArea fx:id="testArea" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" GridPane.rowSpan="6">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </GridPane.margin></TextArea>
    </children>
 </GridPane>
