--- a/resources/fxml/add.fxml
+++ b/resources/fxml/add.fxml
@@ -45,7 +45,7 @@
          <GridPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin></TextField>
-      <TextField fx:id="KeywordsField" GridPane.columnIndex="2" GridPane.rowIndex="3">
+      <TextField fx:id="keywordsField" GridPane.columnIndex="2" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin></TextField>
@@ -69,7 +69,7 @@
          </children>
       </HBox>
       <Label text="Text:" />
-      <TextArea fx:id="testArea" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" GridPane.rowSpan="6">
+      <TextArea fx:id="textArea" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" GridPane.rowSpan="6">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin></TextArea>
