--- a/resources/fxml/authorInfo.fxml
+++ b/resources/fxml/authorInfo.fxml
@@ -5,8 +5,9 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="206.0" prefWidth="303.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="206.0" prefWidth="303.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="147.0" minWidth="10.0" prefWidth="126.0" />
     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="177.0" />
@@ -19,14 +20,38 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Name:" />
-      <Label fx:id="authorName" text="Label" GridPane.columnIndex="1" />
-      <Label text="Surname:" GridPane.rowIndex="1" />
-      <Label fx:id="authorSurname" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Label text="Title:" GridPane.rowIndex="2" />
-      <Label fx:id="authorTitle" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Label text="University/Institute:" GridPane.rowIndex="3" />
-      <Label fx:id="authorUnyInst" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Label text="Name:">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <Label fx:id="authorName" text="Label" GridPane.columnIndex="1">
+         <font>
+            <Font name="Book Antiqua" size="14.0" />
+         </font></Label>
+      <Label text="Surname:" GridPane.rowIndex="1">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <Label fx:id="authorSurname" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <font>
+            <Font name="Book Antiqua" size="14.0" />
+         </font></Label>
+      <Label text="Title:" GridPane.rowIndex="2">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <Label fx:id="authorTitle" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <font>
+            <Font name="Book Antiqua" size="14.0" />
+         </font></Label>
+      <Label text="University/Institute:" GridPane.rowIndex="3">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <Label fx:id="authorUnyInst" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3">
+         <font>
+            <Font name="Book Antiqua" size="14.0" />
+         </font></Label>
       <Button fx:id="okButton" mnemonicParsing="false" onAction="#okBtnAction" prefHeight="25.0" prefWidth="59.0" text="Ok" GridPane.columnIndex="1" GridPane.rowIndex="4" />
    </children>
 </GridPane>
