--- a/resources/fxml/doubleClick.fxml
+++ b/resources/fxml/doubleClick.fxml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.effect.SepiaTone?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="759.0" prefWidth="1025.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <TextArea fx:id="textPrevievArea" prefHeight="759.0" prefWidth="863.0" BorderPane.alignment="CENTER">
+<BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="759.0" prefWidth="1025.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+    <stylesheets>
+        <URL value="@/css/izgled.css" />
+    </stylesheets>
+    <center>
+      <TextArea fx:id="textPrevievArea" prefHeight="759.0" prefWidth="863.0" styleClass="textarea" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
          </BorderPane.margin></TextArea>
    </center>
    <right>
-      <GridPane prefHeight="759.0" prefWidth="226.0" BorderPane.alignment="CENTER">
+      <GridPane gridLinesVisible="true" prefHeight="759.0" prefWidth="226.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="108.0" minWidth="10.0" prefWidth="71.0" />
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="155.0" />
@@ -35,35 +42,57 @@
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
+               <font>
+                  <Font name="System Italic" size="14.0" />
+               </font>
             </Label>
             <Label text="Subject:" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
+               <font>
+                  <Font name="System Italic" size="14.0" />
+               </font>
             </Label>
             <Label text="Authors:" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
+               <font>
+                  <Font name="System Italic" size="14.0" />
+               </font>
             </Label>
             <Label GridPane.rowIndex="3" />
             <Label fx:id="paperNameLabel" text="Label" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
+               <font>
+                  <Font name="Bell MT Bold" size="14.0" />
+               </font>
             </Label>
             <Label fx:id="subjectLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
+               <font>
+                  <Font name="Bell MT Bold" size="14.0" />
+               </font>
             </Label>
             <ListView fx:id="authorsField" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </ListView>
-            <Button fx:id="closeBtn" mnemonicParsing="false" onAction="#closeAction" text="Close" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Button fx:id="closeBtn" mnemonicParsing="false" onAction="#closeAction" prefHeight="30.0" prefWidth="83.0" text="Close" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
+         <effect>
+            <InnerShadow>
+               <input>
+                  <SepiaTone />
+               </input>
+            </InnerShadow>
+         </effect>
       </GridPane>
    </right>
 </BorderPane>
