--- a/resources/fxml/glavna.fxml
+++ b/resources/fxml/glavna.fxml
@@ -3,6 +3,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -44,7 +45,12 @@
                      <top>
                         <HBox prefHeight="29.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                            <children>
-                              <TextField>
+                              <Label text="Search:">
+                                 <HBox.margin>
+                                    <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                                 </HBox.margin>
+                              </Label>
+                              <TextField fx:id="searchField">
                                  <opaqueInsets>
                                     <Insets />
                                  </opaqueInsets>
@@ -52,11 +58,6 @@
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </HBox.margin>
                               </TextField>
-                              <Button fx:id="searchBtn" mnemonicParsing="false" onAction="#searchBtnAction" text="Search">
-                                 <HBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </HBox.margin>
-                              </Button>
                               <Button fx:id="tbAddResearchPaper" mnemonicParsing="false" onAction="#tbAddResearchPaperAction" prefHeight="25.0" prefWidth="22.0" styleClass="btn1">
                                  <HBox.margin>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
