--- a/resources/fxml/glavna.fxml
+++ b/resources/fxml/glavna.fxml
@@ -3,6 +3,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -15,7 +16,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="765.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.projekat.MainController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="765.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
         <URL value="@/css/izgled.css" />
     </stylesheets>
@@ -25,6 +26,12 @@
           <Menu mnemonicParsing="true" text="%_Options">
             <items>
                   <MenuItem onAction="#saveAction" text="%_Save" />
+                  <Menu mnemonicParsing="false" text="%Language">
+                     <items>
+                        <CheckMenuItem fx:id="engLanguage" mnemonicParsing="false" onAction="#engAction" text="ENG" />
+                        <CheckMenuItem fx:id="bsLanguage" mnemonicParsing="false" onAction="#bosanskiAction" text="BS" />
+                     </items>
+                  </Menu>
                   <MenuItem onAction="#printAction" text="%_Print" />
               <MenuItem onAction="#exitAction" text="%_Exit" />
             </items>
