--- a/resources/fxml/about.fxml
+++ b/resources/fxml/about.fxml
@@ -7,7 +7,11 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="176.0" prefWidth="305.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.projekat.AboutController">
+<?import java.net.URL?>
+<GridPane fx:id="aboutWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="184.0" prefWidth="372.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.projekat.AboutController">
+    <stylesheets>
+        <URL value="@/css/izgled.css" />
+    </stylesheets>
     <columnConstraints>
         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -20,7 +24,7 @@
     </rowConstraints>
     <children>
         <ImageView fx:id="slika" fitHeight="40.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" />
-        <Label text="Creator:" GridPane.rowIndex="1">
+        <Label text="%Creator" GridPane.rowIndex="1">
             <GridPane.margin>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </GridPane.margin>
@@ -30,17 +34,17 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </GridPane.margin>
         </Label>
-        <Label text="Program:" GridPane.rowIndex="2">
+        <Label text="%Aplication" GridPane.rowIndex="2">
             <GridPane.margin>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </GridPane.margin>
         </Label>
-        <Label fx:id="vrstaPrograma" text="Research papers database" GridPane.columnIndex="1" GridPane.rowIndex="2">
+        <Label fx:id="vrstaPrograma" text="%Researchpapersdatabase" GridPane.columnIndex="1" GridPane.rowIndex="2">
             <GridPane.margin>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </GridPane.margin>
         </Label>
-      <Label text="Version/date:" GridPane.rowIndex="3" />
+      <Label text="%Version/date" GridPane.rowIndex="3" />
       <Label text="1.0 / 9.2.2019." GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
