--- a/resources/fxml/add.fxml
+++ b/resources/fxml/add.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,7 +12,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<?import java.net.URL?>
 <GridPane fx:id="add2Window" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="1123.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
         <URL value="@/css/izgled.css" />
@@ -32,10 +32,10 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Research paper name:" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Label text="Subject:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Label text="Keywords:" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <Label text="Author/s:" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Label text="%ResPapName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Label text="%Subject1" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Label text="%Keywords" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Label text="%Author/s" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <Label GridPane.columnIndex="1" GridPane.rowIndex="5" />
       <TextField fx:id="resPaperNameField" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <GridPane.margin>
@@ -49,7 +49,7 @@
          <GridPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin></TextField>
-      <Button fx:id="addNewAuthorBtn" mnemonicParsing="false" onAction="#addNewAuthorBtnAction" text="Add New" GridPane.columnIndex="3" GridPane.rowIndex="4">
+      <Button fx:id="addNewAuthorBtn" mnemonicParsing="false" onAction="#addNewAuthorBtnAction" text="%AddNew" GridPane.columnIndex="3" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin>
@@ -61,15 +61,15 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelButtonAction" prefHeight="25.0" prefWidth="72.0" text="Cancel">
+            <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelButtonAction" prefHeight="25.0" prefWidth="72.0" text="%Cancel">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
             </Button>
          </children>
       </HBox>
-      <Label text="Text:" />
-      <TextArea fx:id="textArea" styleClass="textarea" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" GridPane.rowSpan="6">
+      <Label text="%Text" />
+      <TextArea fx:id="textArea" prefHeight="200.0" prefWidth="200.0" styleClass="textarea" GridPane.rowIndex="1" GridPane.rowSpan="6">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin></TextArea>
